hphp/test/slow/coeffects/write_props/if-statement-assignment-error.php.expectf
Fatal error: Writing to object properties requires the capability WriteProperty, which is not provided by the context. Add the context `[write_props]` after the function parameter list (or amend an existing context with a new comma delineated entry `write_props`). in %s on line 19
